<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_name">Поиск</string>
    <string name="library_name">Медиатека</string>
    <string name="settings_name">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="mail">kasatskaya@mail.ru</string>
    <string name="mail_name">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="forward_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_question">Поделиться ссылкой?</string>
    <string name="share_text">"https://practicum.yandex.ru/profile/android-developer-plus/"</string>
    <string name="track_title">Название альбома</string>
    <string name="track_artist">Исполнитель</string>
    <string name="track_time">время</string>
    <string name="update">Обновить</string>
    <string name="search_empty">Ничего не нашлось</string>
    <string name="connection_problem">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nодключение к интернету</string>
    <string name="search_history_tittle">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="duration_track_name">Длительность</string>
    <string name="album_track_name">Альбом</string>
    <string name="year_track_name">Год</string>
    <string name="genre_track_name">Жанр</string>
    <string name="country_track_name">Страна</string>
</resources>