<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yp_black"
    android:orientation="vertical">

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:backgroundTint="@color/yp_black"
        android:gravity="start"
        android:text="@string/settings_name"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:icon="@drawable/back"
        app:iconGravity="textStart"
        app:iconTint="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="10dp">

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:background="?attr/selectableItemBackground"
            android:layout_height="@dimen/item_settings_height"
            android:layout_marginTop="24dp"
            android:theme="@style/MySwitch"
            android:checked="true"
            android:text="@string/dark_theme"
            android:textSize="@dimen/text_setting_size"
            android:textColor="@color/white"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_settings_height"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/share_app"
            android:textColor="@color/white"
            android:textSize="@dimen/text_setting_size"
            app:drawableEndCompat="@drawable/share"
            app:drawableTint="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_settings_height"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/write_to_support"
            android:textColor="@color/white"
            android:textSize="@dimen/text_setting_size"
            app:drawableEndCompat="@drawable/support"
            app:drawableTint="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_settings_height"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/user_agreement"
            android:textColor="@color/white"
            android:textSize="@dimen/text_setting_size"
            app:drawableEndCompat="@drawable/forward"
            app:drawableTint="@color/white"/>
    </LinearLayout>
</LinearLayout>