<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/yp_blue"
    android:padding="16dp">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"
        android:text="@string/app_name"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textSize="@dimen/text_size"
            android:textColor="@color/yp_black"
            android:text="@string/serch_name"
            android:textAllCaps="false"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/yp_black"
            app:iconPadding="@dimen/icon_padding"
            app:cornerRadius="@dimen/radius_button"/>

        <Button
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textSize="@dimen/text_size"
            android:textColor="@color/yp_black"
            android:text="@string/library_name"
            android:textAllCaps="false"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconTint="@color/yp_black"
            app:iconPadding="@dimen/icon_padding"
            app:cornerRadius="@dimen/radius_button"/>

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"
            android:textColor="@color/yp_black"
            android:text="@string/settings_name"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/yp_black"
            app:iconPadding="@dimen/icon_padding"
            app:cornerRadius="@dimen/radius_button"/>

    </LinearLayout>

</LinearLayout>