<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_settings_height">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/track_view_margin_hor"
        android:paddingEnd="@dimen/track_view_margin_hor"
        android:paddingTop="@dimen/track_view_margin_ver"
        android:paddingBottom="@dimen/track_view_margin_ver"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="45dp"
            android:layout_height="45dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/track_title"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"
                    android:text="@string/track_title"
                    android:textSize="16sp"
                    android:fontFamily="@font/ys_display_regular"/>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/track_artist"
                        style="@style/textGray"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/track_artist"
                        android:textSize="@dimen/little_text_size"
                        android:fontFamily="@font/ys_display_regular"/>

                    <ImageView
                        android:id="@+id/dot"
                        style="@style/textGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:src="@drawable/dot"/>

                    <TextView
                        android:id="@+id/track_time"
                        style="@style/textGray"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/track_time"
                        android:textSize="@dimen/little_text_size"
                        android:fontFamily="@font/ys_display_regular"/>
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/forwardIcon"
                style="@style/textGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:gravity="center_vertical"
                android:src="@drawable/forward"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>